<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$AppearancePreference"
        app:icon="@drawable/round_palette_24"
        app:summary="@string/pref_header_appearance_summary"
        app:title="@string/pref_header_appearance" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$GeneralPreference"
        app:icon="@drawable/round_tune_24"
        app:summary="@string/pref_header_general_summary"
        app:title="@string/pref_header_general" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$VideoPreference"
        app:icon="@drawable/round_play_arrow_24"
        app:summary="@string/pref_header_video_summary"
        app:title="@string/pref_header_video" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$UIPreference"
        app:icon="@drawable/round_video_settings_24"
        app:summary="@string/pref_header_ui_summary"
        app:title="@string/pref_header_ui" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$DeveloperPreference"
        app:icon="@drawable/round_code_24"
        app:summary="@string/pref_header_developer_summary"
        app:title="@string/pref_header_developer" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$AdvancePreference"
        app:icon="@drawable/round_settings_24"
        app:summary="@string/pref_header_advanced_summary"
        app:title="@string/pref_header_advanced" />
    <Preference
        app:fragment="app.mpvnova.player.preferences.PreferenceActivity$SupportPreference"
        app:icon="@drawable/round_help_24"
        app:summary="@string/pref_header_support_summary"
        app:title="@string/pref_header_support" />

    <Preference
        android:key="check_for_updates"
        app:icon="@drawable/round_update_24"
        app:summary="@string/pref_check_updates_summary"
        app:title="@string/pref_check_updates_title" />

    <Preference
        android:key="release_history"
        app:icon="@drawable/round_history_24"
        app:summary="@string/pref_release_history_summary"
        app:title="@string/pref_release_history_title" />

    <Preference
        app:icon="@drawable/round_info_24"
        app:summary="@string/pref_header_about_mpv_summary"
        app:title="@string/pref_header_about_mpv">
        <intent
            android:targetClass="app.mpvnova.player.preferences.AboutActivity"
            android:targetPackage="app.mpvnova.player" />
    </Preference>

</PreferenceScreen>
