<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="gpu_next"
        android:summary="@string/pref_gpu_next_summary"
        android:title="@string/pref_gpu_next_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="hardware_decoding"
        android:summary="@string/pref_hardware_decoding_summary"
        android:title="@string/pref_hardware_decoding_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="decoder_auto_fallback"
        android:summary="@string/pref_decoder_auto_fallback_summary"
        android:title="@string/pref_decoder_auto_fallback_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="shield_decoder_mode"
        android:summary="@string/pref_shield_decoder_mode_summary"
        android:title="@string/pref_shield_decoder_mode_title" />

    <app.mpvnova.player.preferences.ShieldFallbackDialogPreference
        android:dependency="shield_decoder_mode"
        android:key="shield_decoder_fallback"
        android:title="@string/pref_shield_decoder_fallback_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue=""
        android:key="preferred_decoder_mode"
        android:summary="@string/pref_preferred_decoder_mode_summary"
        android:title="@string/pref_preferred_decoder_mode_title"
        app:iconSpaceReserved="false" />

    <app.mpvnova.player.preferences.ConfigEditDialogPreference
        app:iconSpaceReserved="false"
        app:filename="mpv.conf"
        android:title="@string/pref_edit_mpv_conf"
        app:dialogMessage="@string/pref_edit_mpv_conf_message" />

    <app.mpvnova.player.preferences.ConfigEditDialogPreference
        app:iconSpaceReserved="false"
        app:filename="input.conf"
        android:title="@string/pref_edit_input_conf"
        app:dialogMessage="@string/pref_edit_input_conf_message" />

</PreferenceScreen>
